--- a/_sass/_team.scss
+++ b/_sass/_team.scss
@@ -5,13 +5,13 @@
 
   // Image container
   .flex-shrink-0 {
-    width: 100px;
-    
+    width: 160;
+
     img {
-      height: 100px;
-      width: 100px;
+      height: 160px;
+      width: 160px;
       border: 3px solid $gray-200;
-      border-radius: 100px;
+      border-radius: 20px;
     }
   }
 
