add bottom margin to publication divs

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,3 +1,7 @@
 // Custom styling
 // 
 // Include the file _sass/_custom.scss to your site to add custom styling
+
+.publication {
+  margin-bottom: $grid-gutter-width;
+}
