--- a/_includes/head.html
+++ b/_includes/head.html
@@ -66,4 +66,5 @@
   <script src="{{ '/assets/theme/js/jquery.min.js' | relative_url }}"></script>
   <script src="{{ '/assets/theme/js/popper.min.js' | relative_url }}"></script>
   <script src="{{ '/assets/theme/js/bootstrap.min.js' | relative_url }}"></script>
+  <script src="https://kit.fontawesome.com/8763ea72cd.js" crossorigin="anonymous"></script>
 </head>
