--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -5,3 +5,11 @@
 .publication {
   margin-bottom: $grid-gutter-width;
 }
+
+.pemph {
+  background-color: #f57e3a;
+}
+
+.text-conf {
+  color: #555555;
+}
