--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -53,6 +53,27 @@ description: Template for team page.
 {% endfor %}
 </div>
 
+{% if people.interns %}
+<h3>Interns</h3>
+
+<div class="d-flex flex-wrap">
+{% for member in people.interns %}
+  <a href="{{ member.site | relative_url }}" class="text-dark">
+    <div class="team-member">
+      <div class="flex-shrink-0 me-3">
+        {% if member.image %}
+          <img src="{{ member.image | relative_url }}" alt="{{ member.name }}">
+        {% endif %}
+        <p id="{{ member.name | strip | url_encode }}" class="text-center fw-bold mb-0">
+          {{ member.name }}
+        </p>
+        <p class="text-muted text-center">{{ member.role }}</p>
+      </div>
+    </div>
+  </a>
+{% endfor %}
+</div>
+{% endif %}
 
 
 {% if people.alumni %}
