--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,9 +4,10 @@
       {% if site.logo %}
         <img class="me-3" src="{{ site.logo | relative_url }}" alt="{{ site.title }}">
       {% endif %}
-      {{ site.title }}
+      CompSec Lab
+      <!-- {{ site.title }} -->
     </a>
-    <a class="navbar-brand aligm-items-center" href="https://postech.ac.kr">
+    <a class="navbar-brand d-flex aligm-items-center" href="https://postech.ac.kr">
       <img class="me-3" src="/assets/logo/postech.jpg">
     </a>
     {% if page.navigation and site.data[page.navigation] %}
