--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -36,7 +36,7 @@ $link-hover-decoration: underline;
 
 $font-family-base: "Roboto", sans-serif;
 
-$headings-margin-bottom: $spacer;
+$headings-margin-bottom: $spacer * .25;
 
 // Tables
 // Buttons + Forms
