--- a/_sass/bootstrap/_reboot.scss
+++ b/_sass/bootstrap/_reboot.scss
@@ -86,7 +86,7 @@ hr:not([size]) {
 //    margin for easier control within type scales as it avoids margin collapsing.
 
 %heading {
-  margin-top: 0; // 1
+  margin-top: $headings-margin-top; // 1
   margin-bottom: $headings-margin-bottom;
   font-family: $headings-font-family;
   font-style: $headings-font-style;
@@ -132,7 +132,7 @@ h6 {
 // bottom margin to use `rem` units instead of `em`.
 
 p {
-  margin-top: 0;
+  margin-top: $paragraph-margin-top;
   margin-bottom: $paragraph-margin-bottom;
 }
 
