resize postech logo

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
       <!-- {{ site.title }} -->
     </a>
     <a class="navbar-brand d-flex aligm-items-center" href="https://postech.ac.kr">
-      <img class="me-3" src="/assets/logo/postech.jpg">
+      <img class="me-3" style="max-height: 18px !important;" src="/assets/logo/postech-sm.jpg">
     </a>
     {% if page.navigation and site.data[page.navigation] %}
       {% assign navigation = site.data[page.navigation] %}
