--- a/assets/css/gallery.scss
+++ b/assets/css/gallery.scss
@@ -10,3 +10,14 @@ img.gallery {
   margin-bottom: 1em;
   border-radius: 10px;
 }
+
+img.left {
+  width: 49%;
+  float: left;
+}
+
+img.right {
+  width: 49%;
+  float: right;
+}
+
