--- a/assets/css/gallery.scss
+++ b/assets/css/gallery.scss
@@ -5,19 +5,45 @@ h2 {
   margin-top: 0em !important;
 }
 
-img.gallery {
-  margin-top: 1em;
-  margin-bottom: 1em;
-  border-radius: 10px;
+.gallery-section p {
+  margin-bottom: 0.5em;
 }
 
-img.left {
-  width: 49%;
-  float: left;
+.gallery-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
 }
 
-img.right {
-  width: 49%;
-  float: right;
+.gallery-thumbnail {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  cursor: pointer;
 }
 
+.modal-content {
+  background: transparent;
+  border: none;
+}
+
+.modal-body {
+  padding: 0;
+}
+
+@media (min-width: 768px) {
+  .gallery-container a {
+    width: calc(33.333% - 1em);
+  }
+}
+
+@media (max-width: 767px) {
+  .gallery-container a {
+    width: 100%;
+  }
+
+  .gallery-thumbnail {
+    height: auto;
+    aspect-ratio: auto;
+  }
+}
