--- a/assets/css/gallery.scss
+++ b/assets/css/gallery.scss
@@ -12,7 +12,8 @@ h2 {
 .gallery-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 1em;
+  // gap: 1em;
+  // justify-content: center;
 }
 
 .gallery-thumbnail {
@@ -31,9 +32,18 @@ h2 {
   padding: 0;
 }
 
+.modal-backdrop.show {
+  opacity: 0.8;
+}
+
+.modal-open {
+  padding-right: 0 !important;
+}
+
 @media (min-width: 768px) {
   .gallery-container a {
-    width: calc(33.333% - 1em);
+    width: calc(33.333%);
+    padding: 0.5%;
   }
 }
 
