limit modal image height to 90% of the viewport height

--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -28,7 +28,7 @@ description: gallery with modal windows
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-body">
-            <img src="{{ image.url | relative_url }}" class="img-fluid" alt="{{ image.alt }}">
+            <img src="{{ image.url | relative_url }}" class="img-fluid img-limit-height" alt="{{ image.alt }}">
           </div>
         </div>
       </div>
