--- a/assets/css/gallery.scss
+++ b/assets/css/gallery.scss
@@ -18,7 +18,7 @@ h2 {
 
 .gallery-thumbnail {
   width: 100%;
-  aspect-ratio: 1 / 1;
+  // aspect-ratio: 1 / 1;
   object-fit: cover;
   cursor: pointer;
 }
